Added error handling on the client

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,7 @@
 <template>
     <router-view></router-view>
-    
+
+    <footer></footer>
+
     <loader is-active.one-way="router.isNavigating"></loader>
 </template>
