Changed the handling of nav-bars when auth or nauth

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -1,7 +1,7 @@
 <template>
     <div id="welcome">
         <div class="ui inverted vertical masthead center aligned segment primary-dark">
-            <unauthenticated-nav-bar></unauthenticated-nav-bar>
+            <nav-bar></nav-bar>
 
             <div class="ui text container">
                 <h1 class="ui inverted header">
