--- a/src/shared-list/index.html
+++ b/src/shared-list/index.html
@@ -7,9 +7,14 @@
         <div class="ui container" style="position: relative;">
             <back-button if.one-time="isAuthenticated"></back-button>
 
-            <header-title if.one-time="!errorMessage">${'sharedLists.title' & t: { listName: listName, userName: userName }}</header-title>
-            <header-title if.one-time="errorMessage">${errorMessage & t: { context: 'title' }}</header-title>
-            <a class="ui primary primary-action button" if.one-time="isAuthenticated && !errorMessage" click.delegate="follow()">
+            <div class="ui text menu" style="margin: 0;padding: 0 0 3em 0;">
+                <div class="item">
+                    <header-title if.one-time="!errorMessage">${'sharedLists.title' & t: { listName: listName, userName: userName }}</header-title>
+                    <header-title if.one-time="errorMessage">${errorMessage & t: { context: 'title' }}</header-title>
+                </div>
+            </div>
+
+            <a class="ui primary primary-action button au-target" if.one-time="isAuthenticated && !errorMessage" click.delegate="follow()" style="margin: 0em 0 3em 0;">
                 ${'sharedLists.followButton' & t}
             </a>
         </div>
