Usage of new naming conventions

--- a/src/alert/index.html
+++ b/src/alert/index.html
@@ -21,7 +21,7 @@
                         <div class="inline field">
                             <div class="ui checkbox">
                                 <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
-                                <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this product</label>
+                                <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this alert</label>
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                         <div class="inline field">
                             <div class="ui checkbox">
                                 <input type="checkbox" checked.bind="isActive" change.delegate="changeActive()">
-                                <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this product</label>
+                                <label style="color: white !important;" i18n="alert.emailOption">Receive email notifications for this alert</label>
                             </div>
                         </div>
                     </div>
