--- a/src/alerts/index.html
+++ b/src/alerts/index.html
@@ -6,7 +6,7 @@
         <div class="ui container" style="position: relative;">
             <div class="ui text menu" style="margin: 0; padding: 3em 0;">
                 <div class="item">
-                    <header-title>${ 'alerts.watchedProducts' & t}</header-title>
+                    <header-title>${ 'alerts.title' & t}</header-title>
                 </div>
             </div>
 
