--- a/src/settings/account/index.html
+++ b/src/settings/account/index.html
@@ -4,7 +4,7 @@
             <div class="ui relaxed basic section" style="width: 80%; margin: 0 auto;">
                 <div class="ui text menu">
                     <div class="item">
-                        <h3 class="ui header" i18n="settings.account.personalInformation">Personal information</h3>
+                        <h3 class="ui header" i18n="settings.account.personalInformation">Personal Information</h3>
                     </div>
                 </div>
 
