--- a/src/settings/alert/index.html
+++ b/src/settings/alert/index.html
@@ -11,14 +11,14 @@
                 <div class="field">
                     <div class="ui checkbox">
                         <input type="checkbox" tabindex="0" class="hidden" checked.bind="user.settings.alertOnPriceDrop">
-                        <label i18n="[html]settings.alerts.priceDrop">Alert me when the best price of an alert <b>drops</b></label>
+                        <label i18n="[html]settings.alerts.priceDrop">Notify me when the best price of an alert <b>drops</b></label>
                     </div>
                 </div>
 
                 <div class="field">
                     <div class="ui checkbox">
                         <input type="checkbox" tabindex="0" class="hidden" checked.bind="user.settings.alertOnPriceRaise">
-                        <label i18n="[html]settings.alerts.priceRaise">Alert me when the best price of an alert <b>raises</b></label>
+                        <label i18n="[html]settings.alerts.priceRaise">Notify me when the best price of an alert <b>raises</b></label>
                     </div>
                 </div>
 
@@ -26,7 +26,7 @@
                     <div class="field">
                         <div class="ui checkbox">
                             <input type="checkbox" tabindex="0" class="hidden" checked.bind="user.settings.specifyChangePercentage">
-                            <label i18n="settings.alerts.changeThreshold">Alert me only when the price changes by at least: </label>
+                            <label i18n="settings.alerts.changeThreshold">Notify me only when the price changes by at least: </label>
                         </div>
                     </div>
 
