--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -49,8 +49,10 @@
                     <div class="eight wide column">
                         <h3 class="ui header" i18n="welcome.blog.join">Join in on the discussion!</h3>
                         <p i18n="welcome.blog.description">We will talk about shopping strategies, app features, and the technology behind PriceWise</p>
-                        <a href="http://blog.pricewi.se/" target="_blank" class="ui large right wordpress button" data-analytics-category="Blog"
-                            data-analytics-action="click" data-analytics-label="button">
+                        <a href="http://blog.pricewi.se/" target="_blank" class="ui large right wordpress button"
+                            data-analytics-category="Blog"
+                            data-analytics-action="click"
+                            data-analytics-label="button">
                             <i class="wordpress icon"></i>Blog
                         </a>
                     </div>
@@ -65,7 +67,9 @@
                         <h1 class="ui header" i18n="welcome.chrome.extensionAvailable">PriceWise has a Chrome extension!</h1>
                     </div>
                     <div class="fourteen wide column">
-                        <a href.one-time="chromeAppUrl" target="_blank" class="ui centered medium image" data-analytics-category="Chrome Store" data-analytics-action="click"
+                        <a href.one-time="chromeAppUrl" target="_blank" class="ui centered medium image"
+                            data-analytics-category="Chrome Store"
+                            data-analytics-action="click"
                             data-analytics-label="badge">
                             <img src="https://developer.chrome.com/webstore/images/ChromeWebStore_BadgeWBorder_v2_496x150.png"></img>
                         </a>
@@ -76,7 +80,9 @@
                         <h3 class="ui header" i18n="welcome.chrome.easily">Get wise more easily!</h3>
                         <p i18n="welcome.chrome.description">Create alerts for your products directly from your product page on our supported websites!</p>
                         <a class="ui large right google plus button" href.one-time="chromeAppUrl" target="_blank" i18n="[append]welcome.chrome.getApp"
-                            data-analytics-category="Chrome Store" data-analytics-action="click" data-analytics-label="button">
+                            data-analytics-category="Chrome Store"
+                            data-analytics-action="click"
+                            data-analytics-label="button">
                             <i class="chrome icon"></i>
                         </a>
                     </div>
@@ -87,17 +93,17 @@
         <div class="ui vertical stripe segment primary-light">
             <div class="ui stackable very relaxed grid container">
                 <div class="fourteen wide center aligned centered column">
-                    <h1 class="ui header">${'welcome.features.sources' & t: { context: 'title' }}</h1>
+                    <h1 class="ui header">${'welcome.features.stores' & t: { context: 'title' }}</h1>
                 </div>
                 <div class="eight wide center aligned centered column">
-                    <h3 class="ui header">${'welcome.features.sources' & t: { context: 'description' }}</h3>
+                    <h3 class="ui header">${'welcome.features.stores' & t: { context: 'description' }}</h3>
                 </div>
             </div>
             <div class="ui four column center aligned divided relaxed doubling grid container">
                 <div class="row">
-                    <div repeat.for="source of sources" class="column">
+                    <div repeat.for="store of stores" class="column">
                         <h2 class="ui icon header">
-                            <img class="ui icon image" src="/images/${source.domain}.png" alt.bind="source.name">
+                            <img class="ui icon image" src="/images/${store.domain}.png" alt.bind="store.name">
                         </h2>
                     </div>
                 </div>
