--- a/src/alerts/followed-lists/index.html
+++ b/src/alerts/followed-lists/index.html
@@ -3,14 +3,13 @@
     <require from="../../shared/components/alerts-list"></require>
 
     <list-menu
-        show.one-time="lists.length"
         lists.one-time="lists"
         selected-list.two-way="currentList"
         delete.call="confirmUnfollowList(list)">
     </list-menu>
 
     <alerts-list
-        alerts.one-time="alerts"
+        alerts.one-way="alerts"
         is-read-only.one-time="true"
         navigate.call="navigateToSharedAlert(alert)">
     </alerts-list>
